haskell-cabal-debian (4.18) unstable; urgency=low

  * Add types to support machine readable copyright files.

 -- David Fox <dsf@seereason.com>  Thu, 27 Nov 2014 07:11:35 -0800

haskell-cabal-debian (4.17.5) unstable; urgency=low

  * Use the prettyclass package and the PP wrappers in the latest
    debian package to do pretty printing.
  * Change default priority to extra
  * Use the new watch file suggested by nomeata
  * Use the control file template suggested in issue #3

 -- David Fox <dsf@seereason.com>  Mon, 15 Sep 2014 13:28:36 -0700

haskell-cabal-debian (4.17.4) unstable; urgency=low

  * Add missing ifdefs to hide the GHCJS constructor when ghcjs-support
    flag is False.
  * Require Cabal < 1.21 when ghcjs-support flag is False.

 -- David Fox <dsf@seereason.com>  Tue, 02 Sep 2014 09:06:20 -0700

haskell-cabal-debian (4.17.3) unstable; urgency=low

  * Moved source repository to github.com.

 -- David Fox <dsf@seereason.com>  Fri, 29 Aug 2014 13:55:26 -0700

haskell-cabal-debian (4.17.2) unstable; urgency=low

  * Fix formatting of the generated debian/*.install files.

 -- David Fox <dsf@seereason.com>  Tue, 19 Aug 2014 16:04:27 -0700

haskell-cabal-debian (4.17.1) unstable; urgency=low

  * Fix install of ghcjs executables - there was an extra subdir.
  * Don't append -ghcjs to default package name.

 -- David Fox <dsf@seereason.com>  Tue, 19 Aug 2014 10:15:46 -0700

haskell-cabal-debian (4.17) unstable; urgency=low

  * Fix bug in architecture dependent build dependency generation - it
    was getting the indep dependencies as well.
  * Support GHCJS executable packages, which are directories with the
    extension .jsexe.

 -- David Fox <dsf@seereason.com>  Mon, 18 Aug 2014 17:31:35 -0700

haskell-cabal-debian (4.16.1) unstable; urgency=low

  * Support for packaging libraries produced by the GHCJS compiler.
  * Generate debianizations that include libraries for multiple compiler
    flavors (not yet suppored in haskell-devscripts and/or Cabal.)